--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </script>
 
     <body>
-        <button onclick="testwebkit()">Test CVE Bug API On PS4 FW</button>
-        <button onclick="testwebkit2()">Test Bug On 8.XX FW</button>
+        <button onclick="testwebkit()">Test CVE Bug API On PS4 or PS% FW</button>
+        <button onclick="testwebkit2()">Test Bug On PS4 8.XX or 2.xx - 4.xx FW</button>
     </body>
 
 </html>
