--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </script>
 
     <body>
-        <button onclick="testwebkit()">Test CVE Bug API On PS4 or PS% FW</button>
+        <button onclick="testwebkit()">Test CVE Bug API On PS4 or PS5 FW</button>
         <button onclick="testwebkit2()">Test Bug On PS4 8.XX or 2.xx - 4.xx FW</button>
     </body>
 
