--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <body>
         <button onclick="testwebkit()">Test CVE Bug API On PS4 or PS5 FW</button>
-        <button onclick="testwebkit2()">Test Bug On PS4 8.XX or 2.xx - 4.xx FW</button>
+        <button onclick="testwebkit2()">Test Bug On PS4 8.XX or PS5 FW</button>
     </body>
 
 </html>
