--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <title>CVE-2021-30858 Webkit Test</title>
+    <title>Ps4-PS5 Webkit Test</title>
     <script>
 
         async function testwebkit() {
