--- a/index.html
+++ b/index.html
@@ -1,41 +1,15 @@
 <html>
-    <title>Ps4-PS5 Webkit Test</title>
-    <script>
+<title> PS4 Exploit by Dex </title>
+<center>
+<font face="segeo ui" ><b>
+PS4 Exploit by Dex<br>
 
-        async function testwebkit() {
-            try{
-            alert("Testing CVE-2021-30858 on PS4 Browser.. Press OK to check bug API!");
-            let font = new FontFace('font1', 'url()',{});
-            alert("FontFace(). OK!!");
-            var fontFaceSet = new FontFaceSet([font]);
-            alert("FontFaceSet(). OK!!");
-            
-            font.family = 'font2';
-            alert("CVE-2021-30858 Webkit exploit bug.. FontFaceSet() and FontFace() are available on PS4 Browser :P!!");
-              }
-            catch(e){
-                alert(e);
-            }
-        }
+<button onclick=z"jb()">HEN (8.03)</button>
 
-        async function testwebkit2() {
-            try{
-            alert("Testing CVE-2021-30858 on PS4 Browser.. ReservesV1.\n This should not give you any 'Memory Errors'.\n If 'Bug Patched' Msgs or 'Memory Error Msg' shows up, that means this bug does not work on your current FW and has been patched!\nIf you get 'The String did not match the expected pattern it's OK, Means it's working as expected! '");
-            let font = new FontFace('font1','',{});
-            var fontFaceSet = new FontFaceSet([font]);
-            font.family = 'font2';
-            alert("Bug Patched :(");
-               }
-            catch(e){
-                alert(e);
-            }
-}
-
-    </script>
-
-    <body>
-        <button onclick="testwebkit()">Test CVE Bug API On PS4 and PS5 FW</button>
-        <button onclick="testwebkit2()">Test Bug On PS4 8.XX or PS5 FW</button>
-    </body>
-
-</html>
+<script>
+function jb() {
+  alert("Waiting for host!");
+  alert("Payload Injected Successfuly!")
+  )
+  <?script>
+  <html>
